--- a/package.json
+++ b/package.json
@@ -8,16 +8,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/js-cookie": "^2.2.6",
+    "axios": "^0.21.0",
+    "cookie": "^0.4.1",
+    "js-cookie": "^2.2.1",
     "next": "9.5.2",
     "next-images": "^1.4.1",
+    "polished": "^4.0.5",
     "react": "16.13.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "16.13.1",
+    "react-switch": "^5.0.1",
+    "recoil": "^0.1.2",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.0",
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
-    "@types/styled-components": "^5.1.2",
+    "@types/recoil": "^0.0.1",
+    "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "babel-plugin-inline-react-svg": "^1.1.1",
